--- a/index.html
+++ b/index.html
@@ -81,15 +81,10 @@
       gap: 0.75rem;
     }
 
+    /* Bigger logo */
     .brand img {
-      height: 36px;
+      height: 100px;
       width: auto;
-    }
-
-    .brand-text {
-      font-weight: 700;
-      font-size: 1.1rem;
-      letter-spacing: 0.02em;
     }
 
     nav {
@@ -526,8 +521,8 @@
   <header>
     <div class="container header-inner">
       <div class="brand">
-        <img src="logo-myevreport.png" alt="My EV Report logo">
-        <div class="brand-text">My EV Report</div>
+        <!-- Only PNG logo, no text logo -->
+        <img src="logo-myevreport.png" alt="My EV Report logo" class="h-10 w-auto">
       </div>
       <nav>
         <a href="#how">How it works</a>
