--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
       <div class="quote-strip">
         “The report gave me confidence the battery was genuinely healthy and helped me justify the price. I
         wouldn’t buy another EV without it.”
-        <strong>EV buyer, Nissan Leaf (North East England)</strong>
+        <strong>Alan Banks, Tesla Model Y Owner</strong>
       </div>
     </div>
   </section>
